--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      href="./asset/logo/simonGameLogo.gif"
+      type="image/x-icon"
+    />
     <title>Simon</title>
     <link rel="stylesheet" href="styles.css" />
     <link
