--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link
-      rel="stylesheet"
+      rel="icon"
       href="./asset/logo/simonGameLogo.gif"
       type="image/x-icon"
     />
